force-app/main/default/objects/ServiceContract/fields/VBOT_Covers_Battery__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Covers_Battery__c</fullName>
    <label>Covers Battery</label>
    <description>Whether this VerdantCare tier covers the battery pack (wear and warranty).</description>
    <inlineHelpText>Coverage flag used by the coverage-gap visualizer to render the matrix.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>