force-app/main/default/objects/ServiceContract/fields/VBOT_Covers_Hardware__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Covers_Hardware__c</fullName>
    <label>Covers Hardware</label>
    <description>Whether this VerdantCare tier covers the physical mower (motor, chassis, blades).</description>
    <inlineHelpText>Coverage flag used by the coverage-gap visualizer to render the matrix.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>