force-app/main/default/objects/ServiceContract/fields/VBOT_Covers_Sensors__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Covers_Sensors__c</fullName>
    <label>Covers Sensors</label>
    <description>Whether this VerdantCare tier covers the GPS / lidar / boundary sensors.</description>
    <inlineHelpText>Coverage flag used by the coverage-gap visualizer to render the matrix.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>