force-app/main/default/objects/ServiceContract/fields/VBOT_Covers_Software__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Covers_Software__c</fullName>
    <label>Covers Software</label>
    <description>Whether this VerdantCare tier covers the firmware, mobile app and software-as-a-service features.</description>
    <inlineHelpText>Coverage flag used by the coverage-gap visualizer to render the matrix.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>