force-app/main/default/objects/ServiceContract/fields/VBOT_Is_Template__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Is_Template__c</fullName>
    <label>Is Template</label>
    <description>Marks a ServiceContract record as a non-assigned tier template (Plus, Premium). Templates are shown alongside the active contract for upsell comparison; they are not real customer contracts.</description>
    <inlineHelpText>Check for Plus / Premium template offers. Uncheck for the customer's actually active contract.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>