force-app/main/default/objects/ServiceContract/fields/VBOT_Monthly_Price__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Monthly_Price__c</fullName>
    <label>Monthly Price</label>
    <description>Monthly subscription price for this VerdantCare tier. Surfaced by the pricing visualizer.</description>
    <inlineHelpText>Price per month for this VerdantCare tier (gross).</inlineHelpText>
    <type>Currency</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>