force-app/main/default/objects/ServiceContract/fields/VBOT_Tier__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Tier__c</fullName>
    <label>Tier</label>
    <description>VerdantCare tier marker used by the Service &amp; Warranty LWCs to render the right Basic / Plus / Premium card.</description>
    <inlineHelpText>VerdantCare service tier: Basic, Plus, or Premium.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
                <default>true</default>
                <label>Basic</label>
            </value>
            <value>
                <fullName>Plus</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>