force-app/main/default/objects/ServiceContract/fields/VBOT_Yearly_Price__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Yearly_Price__c</fullName>
    <label>Yearly Price</label>
    <description>Yearly (pre-paid) subscription price for this VerdantCare tier. Surfaced by the pricing visualizer.</description>
    <inlineHelpText>Price per year for this VerdantCare tier (gross). Usually cheaper than 12x monthly.</inlineHelpText>
    <type>Currency</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>