force-app/main/default/objects/ServiceContract/listViews/VBOT_Service_Contracts.listView-meta.xml
<ListView>
    <fullName>VBOT_Service_Contracts</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VBOT_Tier__c</field>
        <operation>notEqual</operation>
        <value></value>
    </filters>
    <label>VBOT Service Contracts</label>
</ListView>